conflicts resolved and commited by nipun.dilhan1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 comman.error.invalid.username = invalid user name
 comman.error.invalid.password = invalid password
+comman.success.save.message =  successfully saved
+comman.success.update.message =  successfully updated
