--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 comman.error.invalid.username = invalid user name
 comman.error.invalid.password = invalid password
+comman.error.invalid.email = invalid email
+
+
 comman.success.save.message =  successfully saved
 comman.success.update.message =  successfully updated
+comman.success.update.tempory.message =  temporarily  updated
