confilicts resolved nipun.dilhan1@gmail.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 comman.error.invalid.username = invalid user name
 comman.error.invalid.password = invalid password
 comman.error.invalid.email = invalid email
+comman.error.invalid.code = invalid code
 
 
 comman.success.save.message =  successfully saved
 comman.success.update.message =  successfully updated
 comman.success.update.tempory.message =  temporarily  updated
+comman.success.save.tempory.message =  successfully saved  temporaly
+
