--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ comman.error.invalid.username = invalid user name
 comman.error.invalid.password = invalid password
 comman.error.invalid.email = invalid email
 comman.error.invalid.code = invalid code
-
+comman.error.invalid.mobile = invalid mobile
 
 comman.success.save.message =  successfully saved
 comman.success.update.message =  successfully updated
