changes nd1 commited

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ comman.error.invalid.password = invalid password
 comman.error.invalid.email = invalid email
 comman.error.invalid.code = invalid code
 comman.error.invalid.mobile = invalid mobile
+comman.error.invalid.fax = invalid fax
+
 
 comman.success.save.message =  successfully saved
 comman.success.update.message =  successfully updated
