ndj changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ comman.success.save.message =  successfully saved
 comman.success.update.message =  successfully updated
 comman.success.update.tempory.message =  temporarily  updated
 comman.success.save.tempory.message =  successfully saved  temporaly
-
+comman.success.vendor.active =  active vendor
+comman.success.customer =  active customer
