changes and conflicts resolved commited nd1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ comman.success.update.tempory.message =  temporarily  updated
 comman.success.save.tempory.message =  successfully saved  temporaly
 comman.success.vendor.active =  active vendor
 comman.success.customer =  active customer
+comman.success.renewal.fd=  fixed deposite renewed successfully
+comman.success.add.interest.sa=  interest add to the savings account
+
